# STORE-CLI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  main_ref.cpp  qq.cpp  run.bat
data/: categories.json  products.json  transactions.json  users.json
include/entities/: Category.hpp  Product.hpp  Store.hpp  Transaction.hpp  User.hpp
include/menus/: AdminMenu.hpp  MainMenu.hpp  MenuBase.hpp  ShoppingMenu.hpp
include/repositories/: BaseRepository.hpp  CategoryRepository.hpp  ProductRepository.hpp  StoreRepository.hpp  TransactionRepository.hpp  UserRepository.hpp
include/services/: AdminService.hpp  AuthenticationService.hpp  CategoryService.hpp  ProductService.hpp  ShoppingService.hpp  StoreService.hpp  TransactionService.hpp  UserService.hpp
include/utils/: FormatHelper.hpp  InputValidator.hpp
libs/bcrypt/: bcrypt.cpp
src/: MainMenu.hpp  main.cpp
src/auth/: AuthService.hpp
src/entities/: Category.cpp  Category.hpp  Product.cpp  Product.hpp  Store.cpp  Transaction.cpp  Transaction.hpp  User.cpp  User.hpp
src/menus/: AdminMenu.cpp  AdminMenu.hpp  MainMenu.cpp  MainMenu.hpp  MenuBase.hpp  ShoppingMenu.cpp  ShoppingMenu.hpp
src/repositories/: BaseRepository.cpp  BaseRepository.hpp  CategoryRepository.cpp  CategoryRepository.hpp  ProductRepository.cpp  ProductRepository.hpp  StoreRepository.cpp  TransactionRepository.cpp  TransactionRepository.hpp  UserRepository.cpp  UserRepository.hpp
src/services/: AdminService.cpp  AdminService.hpp  AuthenticationService.cpp  AuthenticationService.hpp  CategoryService.cpp  CategoryService.hpp  (+9 more)
(+4 files in other folders)
